Bug 98020 - Tonga agd5f 4.9-wip WARNING: at drivers/gpu/drm/drm_irq.c:1168 drm_vblank_put+0xaa/0xb0
Summary: Tonga agd5f 4.9-wip WARNING: at drivers/gpu/drm/drm_irq.c:1168 drm_vblank_put...
Status: RESOLVED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/AMDgpu (show other bugs)
Version: DRI git
Hardware: Other All
: medium normal
Assignee: Default DRI bug account
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-10-02 20:53 UTC by Andy Furniss
Modified: 2016-10-04 22:38 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
undo page_flip ioctl damage (3.53 KB, patch)
2016-10-03 08:22 UTC, Daniel Vetter
no flags Details | Splinter Review

Description Andy Furniss 2016-10-02 20:53:44 UTC
R9285 on current agd5f drm-next-4.9-wip I get 00s of below when running videos/games full screen.

The last version of the branch didn't have this issue.

No bisect, but a couple of reset --hard seem to show it started with one of the recent merges.

Oct  2 20:59:18 ph4 kernel: WARNING: CPU: 2 PID: 735 at drivers/gpu/drm/drm_irq.c:1168 drm_vblank_put+0xaa/0xb0 [drm]
Oct  2 20:59:18 ph4 kernel: Modules linked in: amdgpu fbcon bitblit fbcon_rotate fbcon_ccw fbcon_ud snd_hda_codec_realtek fbcon_cw snd_hda_codec_generic snd_usb_audio softcursor snd_hda_codec_hdmi font snd_hda_intel mfd_core tileblit i2c_algo_bit snd_hda_codec drm_kms_helper snd_usbmidi_lib snd_rawmidi snd_hda_core syscopyarea sysfillrect snd_hwdep sysimgblt snd_seq_device fb_sys_fops snd_pcm ttm drm snd_timer snd r8169 serio_raw e100 xhci_pci xhci_hcd soundcore i2c_piix4 mii k10temp acpi_cpufreq
Oct  2 20:59:18 ph4 kernel: CPU: 2 PID: 735 Comm: Xorg Tainted: G        W       4.8.0-rc8-gb97c6ee #3
Oct  2 20:59:18 ph4 kernel: Hardware name: To Be Filled By O.E.M. To Be Filled By O.E.M./970 Extreme3 R2.0, BIOS P1.60 06/05/2014
Oct  2 20:59:18 ph4 kernel:  0000000000000000 ffff88023210bc78 ffffffff812d8bcb 0000000000000000
Oct  2 20:59:18 ph4 kernel:  0000000000000000 ffff88023210bcb8 ffffffff8105d378 00000490a016ee6b
Oct  2 20:59:18 ph4 kernel:  ffff88023210bdb8 ffff8802320e9068 00000000ffffffea ffff8802320e9000
Oct  2 20:59:18 ph4 kernel: Call Trace:
Oct  2 20:59:18 ph4 kernel:  [<ffffffff812d8bcb>] dump_stack+0x4f/0x74
Oct  2 20:59:18 ph4 kernel:  [<ffffffff8105d378>] __warn+0xd8/0x100
Oct  2 20:59:18 ph4 kernel:  [<ffffffff8105d458>] warn_slowpath_null+0x18/0x20
Oct  2 20:59:18 ph4 kernel:  [<ffffffffa015ce7a>] drm_vblank_put+0xaa/0xb0 [drm]
Oct  2 20:59:18 ph4 kernel:  [<ffffffffa015ce92>] drm_crtc_vblank_put+0x12/0x20 [drm]
Oct  2 20:59:18 ph4 kernel:  [<ffffffffa0177357>] drm_mode_page_flip_ioctl+0x1c7/0x4a0 [drm]
Oct  2 20:59:18 ph4 kernel:  [<ffffffffa015ba98>] drm_ioctl+0x218/0x510 [drm]
Oct  2 20:59:18 ph4 kernel:  [<ffffffffa0177190>] ? drm_mode_cursor2_ioctl+0x10/0x10 [drm]
Oct  2 20:59:18 ph4 kernel:  [<ffffffff811a4d70>] ? do_readv_writev+0x130/0x220
Oct  2 20:59:18 ph4 kernel:  [<ffffffff8108127c>] ? preempt_count_add+0x7c/0xc0
Oct  2 20:59:18 ph4 kernel:  [<ffffffff810812a3>] ? preempt_count_add+0xa3/0xc0
Oct  2 20:59:18 ph4 kernel:  [<ffffffff815a9313>] ? _raw_write_unlock_irqrestore+0x13/0x30
Oct  2 20:59:18 ph4 kernel:  [<ffffffff815a9339>] ? _raw_spin_unlock_irqrestore+0x9/0x10
Oct  2 20:59:18 ph4 kernel:  [<ffffffffa035d054>] amdgpu_drm_ioctl+0x54/0x90 [amdgpu]
Oct  2 20:59:18 ph4 kernel:  [<ffffffff811b7e58>] do_vfs_ioctl+0x98/0x5b0
Oct  2 20:59:18 ph4 kernel:  [<ffffffff811c2892>] ? __fget+0x72/0xa0
Oct  2 20:59:18 ph4 kernel:  [<ffffffff811b83b7>] SyS_ioctl+0x47/0x80
Oct  2 20:59:18 ph4 kernel:  [<ffffffff815a979f>] entry_SYSCALL_64_fastpath+0x17/0x93
Oct  2 20:59:18 ph4 kernel: ---[ end trace 24b073819e664cb0 ]---
Oct  2 20:59:18 ph4 kernel: ------------[ cut here ]------------
Comment 1 Daniel Vetter 2016-10-03 08:22:33 UTC
Created attachment 126960 [details] [review]
undo page_flip ioctl damage

Please test this one here, thanks
Comment 2 Michel Dänzer 2016-10-03 08:36:10 UTC
Comment on attachment 126960 [details] [review]
undo page_flip ioctl damage

Please test https://patchwork.freedesktop.org/patch/113365/ instead.
Comment 3 Andy Furniss 2016-10-03 09:56:25 UTC
(In reply to Michel Dänzer from comment #2)
> Comment on attachment 126960 [details] [review] [review]
> undo page_flip ioctl damage
> 
> Please test https://patchwork.freedesktop.org/patch/113365/ instead.

That fixes it, thanks.
Comment 4 Mathieu Belanger 2016-10-03 12:07:04 UTC
Seam to have fixed it on my HD 7970 too!
Comment 5 Andy Furniss 2016-10-04 22:38:06 UTC
This is in 4.9-wip now and I guess elsewhere so closing.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.